--- a/notebooks/analisis.ipynb
+++ b/notebooks/analisis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "6c12d443",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "99498c38",
    "metadata": {},
    "outputs": [],
@@ -147,6 +147,31 @@
     "    .apply(pd.to_numeric, errors='coerce')\n",
     "    .astype('Int64')\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4d6f9ccb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['trabajador', 'edad', 'sexo', 'estado_civil', 'experiencia_radiologia',\n",
+       "       'ingresos_mensuales', 'condiciones_oculares', 'lentes', 'iluminacion',\n",
+       "       'tiempo_de_exposicion', 'frecuencia_de_pausas', 'duracion_de_jornada',\n",
+       "       'uso_de_dispositivos', 'distancia_hacia_el_monitor'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_encuesta.columns"
    ]
   },
   {
@@ -375,24 +400,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4ea88640",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final = pd.read_csv(\"../data/2_processed/df_models_synthetic.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "id": "a284ca1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_final.describe(include='all').T.to_csv(stats_dir / 'descriptive_statistics.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "52a6ea5d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# crea una paleta de colores personalizada con el nombre medical_palette que tenga sea sobrio y para una audiencia médica\n",
-    "medical_palette = sns.color_palette(\"Set2\")\n",
-    "sns.set_palette(medical_palette)"
    ]
   },
   {
@@ -405,7 +428,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
+   "id": "52a6ea5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# crea una paleta de colores personalizada con el nombre medical_palette que tenga sea sobrio y para una audiencia médica\n",
+    "medical_palette = sns.color_palette(\"Set2\")\n",
+    "sns.set_palette(medical_palette)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5e6092f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_final = pd.read_csv(\"../data/2_processed/df_models_synthetic.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "d25d17cd",
    "metadata": {},
    "outputs": [],
@@ -417,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "c950ad82",
    "metadata": {},
    "outputs": [],
@@ -436,10 +481,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "94b23a28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hugo_\\AppData\\Local\\Temp\\ipykernel_18712\\1983627631.py:11: UserWarning: \n",
+      "The palette list has fewer values (8) than needed (9) and will cycle, which may produce an uninterpretable plot.\n",
+      "  ax = sns.barplot(data=df_plot, x='category', y='count', hue='category', palette=pal, dodge=False)\n"
+     ]
+    }
+   ],
    "source": [
     "for col in cat_cols:\n",
     "    # Convertir la columna a string, aprovechando que ya es de tipo category o int\n",
@@ -467,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "6fed3106",
    "metadata": {},
    "outputs": [],
@@ -487,10 +542,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "a0906fa7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hugo_\\AppData\\Local\\Temp\\ipykernel_18712\\1283730638.py:48: UserWarning: \n",
+      "The palette list has fewer values (2) than needed (4) and will cycle, which may produce an uninterpretable plot.\n",
+      "  g_violin = sns.catplot(\n",
+      "C:\\Users\\hugo_\\AppData\\Local\\Temp\\ipykernel_18712\\1283730638.py:59: UserWarning: \n",
+      "The palette list has fewer values (2) than needed (4) and will cycle, which may produce an uninterpretable plot.\n",
+      "  g_point = sns.catplot(\n"
+     ]
+    }
+   ],
    "source": [
     "# Gráficos bivariados usando 'svi' como variable dependiente (target)\n",
     "target = 'svi'\n",
@@ -601,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "0ce2b0f4",
    "metadata": {},
    "outputs": [],
@@ -629,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "15049063",
    "metadata": {},
    "outputs": [
@@ -637,9 +705,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cronbach's alpha para frecuencia: 0.843 (muy buena)\n",
-      "Cronbach's alpha para intensidad: 0.985 (excelente, pero puede indicar redundancia)\n",
-      "Cronbach's alpha para severidad: 0.726 (buena)\n"
+      "Cronbach's alpha para frecuencia: 0.823 (muy buena)\n",
+      "Cronbach's alpha para intensidad: 0.825 (muy buena)\n",
+      "Cronbach's alpha para severidad: 0.791 (buena)\n"
      ]
     }
    ],
@@ -691,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "b2724f7d",
    "metadata": {},
    "outputs": [],
@@ -713,33 +781,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "91acba1e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n",
-      "d:\\encuesta_fatiga_visual\\.venv\\Lib\\site-packages\\scipy\\stats\\_axis_nan_policy.py:579: RuntimeWarning: Precision loss occurred in moment calculation due to catastrophic cancellation. This occurs when the data are nearly identical. Results may be unreliable.\n",
-      "  res = hypotest_fun_out(*samples, **kwds)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Realiza un test de medias entre los grupos con y sin SVI \n",
     "# para todas las columnas de df_numeric excepto el target y el score (puntaje_sindrome_visual_informatico)\n",
@@ -850,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 29,
    "id": "db6274a1",
    "metadata": {},
    "outputs": [],
@@ -859,12 +904,12 @@
     "df_models = df_numeric.drop(columns=[col for col in df_numeric.columns if col.endswith((\"_frecuencia\", \"_intensidad\", \"_severidad\"))])\n",
     "\n",
     "# eliminamos las columnas 'puntaje_sindrome_visual_informatico' y 'severity_check'\n",
-    "df_models = df_models.drop(columns=['puntaje_sindrome_visual_informatico', 'severity_check', 'trabajador'])"
+    "df_models = df_models.drop(columns=['puntaje_sindrome_visual_informatico'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 30,
    "id": "3b433506",
    "metadata": {},
    "outputs": [],
@@ -885,22 +930,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "id": "34d8be6d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('edad', 'estado_civil'),\n",
-       " ('edad', 'experiencia_radiologia'),\n",
-       " ('edad', 'ingresos_mensuales'),\n",
-       " ('experiencia_radiologia', 'ingresos_mensuales'),\n",
-       " ('experiencia_radiologia', 'lentes'),\n",
-       " ('condiciones_oculares', 'lentes')]"
+       "[('tiempo_de_exposicion', 'svi')]"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "3d2d1c78",
    "metadata": {},
    "outputs": [
@@ -964,28 +1004,28 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                    svi   R-squared:                       0.127\n",
-      "Model:                            OLS   Adj. R-squared:                 -0.013\n",
-      "Method:                 Least Squares   F-statistic:                    0.9053\n",
-      "Date:                Wed, 01 Oct 2025   Prob (F-statistic):              0.476\n",
-      "Time:                        22:10:20   Log-Likelihood:                -19.132\n",
-      "No. Observations:                  30   AIC:                             48.26\n",
-      "Df Residuals:                      25   BIC:                             55.27\n",
+      "Dep. Variable:                    svi   R-squared:                       0.416\n",
+      "Model:                            OLS   Adj. R-squared:                  0.373\n",
+      "Method:                 Least Squares   F-statistic:                     9.775\n",
+      "Date:                Sat, 11 Oct 2025   Prob (F-statistic):           4.79e-06\n",
+      "Time:                        09:10:51   Log-Likelihood:                -14.048\n",
+      "No. Observations:                  60   AIC:                             38.10\n",
+      "Df Residuals:                      55   BIC:                             48.57\n",
       "Df Model:                           4                                         \n",
       "Covariance Type:            nonrobust                                         \n",
       "==============================================================================================\n",
       "                                 coef    std err          t      P>|t|      [0.025      0.975]\n",
       "----------------------------------------------------------------------------------------------\n",
-      "const                          0.7101      0.427      1.664      0.109      -0.169       1.589\n",
-      "tiempo_de_exposicion           0.1024      0.202      0.508      0.616      -0.313       0.518\n",
-      "frecuencia_de_pausas          -0.3031      0.377     -0.803      0.429      -1.080       0.474\n",
-      "iluminacion                   -0.0273      0.192     -0.142      0.888      -0.423       0.368\n",
-      "distancia_hacia_el_monitor     0.2523      0.198      1.272      0.215      -0.156       0.661\n",
+      "const                         -0.0427      0.205     -0.208      0.836      -0.454       0.369\n",
+      "tiempo_de_exposicion           0.0823      0.014      5.885      0.000       0.054       0.110\n",
+      "frecuencia_de_pausas          -0.0471      0.059     -0.804      0.425      -0.164       0.070\n",
+      "iluminacion                   -0.1616      0.098     -1.647      0.105      -0.358       0.035\n",
+      "distancia_hacia_el_monitor     0.0222      0.065      0.343      0.733      -0.108       0.152\n",
       "==============================================================================\n",
-      "Omnibus:                       15.899   Durbin-Watson:                   1.628\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):                3.058\n",
-      "Skew:                          -0.239   Prob(JB):                        0.217\n",
-      "Kurtosis:                       1.510   Cond. No.                         9.98\n",
+      "Omnibus:                        1.394   Durbin-Watson:                   2.212\n",
+      "Prob(Omnibus):                  0.498   Jarque-Bera (JB):                1.127\n",
+      "Skew:                          -0.104   Prob(JB):                        0.569\n",
+      "Kurtosis:                       2.362   Cond. No.                         64.4\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -1115,7 +1155,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.8"
   }
  },
  "nbformat": 4,
